Initial CSS commit

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
-<ul>
-  <li *ngFor="let type of types; trackBy trackBy">
-    <a [routerLink]="['type', type.id]">{{type.name}}</a>
-  </li>
-</ul>
+<div class="ui menu borderless">
+  <a class="header item" href="/">
+    <img src="/assets/logo.png" alt="Logo">Fachschaft Physik
+  </a>
+</div>
