--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,4 +1,4 @@
-<a (click)="back()"><i class="angle left icon"></i>Zurück zur Übersicht</a>
+<a [routerLink]="['/type', this.event?.eventTypeId]"><i class="angle left icon"></i>Zurück zur Übersicht</a>
 <h1>{{event?.name}}</h1>
 <p><b>Freie Plätze:</b> {{event?.freeSpots}} von {{event?.maxParticipants}}</p>
 <p><b>Beschreibung:</b></p>
@@ -31,29 +31,29 @@
     </div>
   </div>
 
-  <div class="inline field">
+  <div class="inline field" *ngIf="event?.needsHasTicket">
     <div class="ui checkbox">
       <input formControlName="hasTicket" name="hasTicket" type="checkbox">
       <label>Hast du ein KVV-Semesterticket?</label>
     </div>
   </div>
 
-  <div class="field">
+  <div class="field" *ngIf="event?.needsBirthInformation">
     <label>Geburtsdatum:</label>
     <input formControlName="birthDate" name="birthDate" type="date" maxlength="10">
   </div>
 
-  <div class="field">
+  <div class="field" *ngIf="event?.needsBirthInformation">
     <label>Geburtsort:</label>
     <input formControlName="birthPlace" name="birthPlace" type="text" maxlength="255">
   </div>
 
-  <div class="field">
-    <button class="ui submit primary button" type="submit" value="Anmelden" [disabled]="loading" [ngClass]="{'loading' : loading}">Anmelden</button>
+  <div class="ui error message" *ngIf="backendError">
+    <div class="header">Error:</div>
+    <p>{{backendError}}</p>
   </div>
 
-  <div class="ui error message" *ngIf="backendError">
-    <div class="header">Server-Fehler</div>
-    <p>{{backendError}}</p>
+  <div class="field">
+    <button class="ui submit primary button" type="submit" value="Anmelden" [disabled]="loading" [ngClass]="{'loading' : loading}">Anmelden</button>
   </div>
 </form>
