--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,28 @@
-<p>footer works!</p>
+<footer class="ui vertical footer segment">
+  <div class="ui container">
+    <div class="ui stackable grid">
+      <div class="eight wide column">
+        <h4 class="ui header">Information</h4>
+        <div class="ui link list">
+          <a class="item" href="https://fachschaft.physik.kit.edu/" target="_blank">
+            <i class="home icon"></i>Fachschaft
+          </a>
+        </div>
+      </div>
+      <div class="eight wide column">
+        <h4 class="ui header">Rechtliches</h4>
+        <div class="ui link list">
+          <a class="item" href="https://fachschaft.physik.kit.edu/drupal/content/datenschutzerkl%C3%A4rung" target="_blank">
+            <i class="shield alternate icon"></i>Datenschutz
+          </a>
+          <a class="item" href="https://fachschaft.physik.kit.edu/drupal/content/impressum" target="_blank">
+            <i class="info icon"></i>Impressum
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="ui horizontal small divided link list">
+      <p class="item">&copy; 2021 Fachschaft Physik</p>
+    </div>
+  </div>
+</footer>
