Small style updates

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="ui vertical footer segment">
   <div class="ui container">
     <div class="ui stackable grid">
-      <div class="eight wide column">
+      <div class="five wide column">
         <h4 class="ui header">Information</h4>
         <div class="ui link list">
           <a class="item" href="https://fachschaft.physik.kit.edu/" target="_blank">
@@ -9,7 +9,7 @@
           </a>
         </div>
       </div>
-      <div class="eight wide column">
+      <div class="five wide column">
         <h4 class="ui header">Rechtliches</h4>
         <div class="ui link list">
           <a class="item" href="https://fachschaft.physik.kit.edu/drupal/content/datenschutzerkl%C3%A4rung" target="_blank">
@@ -20,9 +20,17 @@
           </a>
         </div>
       </div>
+      <div class="five wide column">
+        <h4 class="ui header">Open-Source</h4>
+        <div class="ui link list">
+          <a class="item" href="https://github.com/fsphys/ophasen-anmelder-frontend" target="_blank">
+            <i class="info icon"></i>Source-Code
+          </a>
+        </div>
+      </div>
     </div>
     <div class="ui horizontal small divided link list">
-      <p class="item">&copy; 2021 Fachschaft Physik</p>
+      <p class="item">&copy; 2021-2022 Fachschaft Physik</p>
     </div>
   </div>
 </footer>
