--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="ui menu borderless">
   <a class="header item" href="/">
-    <img src="assets/logo.png" alt="Logo">Fachschaft Physik
+    <img src="assets/logo.png" alt="Logo">Fachschaft Physik am KIT
   </a>
 </div>
