UPD: Imprint and data protection links

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -12,10 +12,10 @@
       <div class="five wide column">
         <h4 class="ui header">Rechtliches</h4>
         <div class="ui link list">
-          <a class="item" href="https://fachschaft.physik.kit.edu/drupal/content/datenschutzerkl%C3%A4rung" target="_blank">
+          <a class="item" href="https://fachschaft.physik.kit.edu/de/datenschutz/" target="_blank">
             <i class="shield alternate icon"></i>Datenschutz
           </a>
-          <a class="item" href="https://fachschaft.physik.kit.edu/drupal/content/impressum" target="_blank">
+          <a class="item" href="https://fachschaft.physik.kit.edu/de/impressum/" target="_blank">
             <i class="info icon"></i>Impressum
           </a>
         </div>
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="ui horizontal small divided link list">
-      <p class="item">&copy; 2021-2022 Fachschaft Physik</p>
+      <p class="item">&copy; 2021-2023 Fachschaft Physik</p>
     </div>
   </div>
 </footer>
