UPD: Upgrade to Angular 20

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -23,14 +23,14 @@
       <div class="five wide column">
         <h4 class="ui header">Open-Source</h4>
         <div class="ui link list">
-          <a class="item" href="https://github.com/fsphys/ophasen-anmelder-frontend" target="_blank">
+          <a class="item" href="https://gitlab.kit.edu/kit/fs-physik/admins/ophasen-anmelder-frontend" target="_blank">
             <i class="info icon"></i>Source-Code
           </a>
         </div>
       </div>
     </div>
     <div class="ui horizontal small divided link list">
-      <p class="item">&copy; 2021-2024 Fachschaft Physik</p>
+      <p class="item">&copy; 2021-2025 Fachschaft Physik</p>
     </div>
   </div>
 </footer>
