--- a/src/app/pages/participation/participation.component.html
+++ b/src/app/pages/participation/participation.component.html
@@ -1,7 +1,13 @@
 <a [routerLink]="'/'" ><i class="angle left icon"></i>Zurück zur Startseite</a>
-<h1 class="ui header" *ngIf="success == 'true'">Erfolg!</h1>
-<p *ngIf="success == 'true'">Deine Anmeldung war erfolgreich!</p>
-<h1 class="ui header" *ngIf="success != 'true'">Deine Anmeldung</h1>
+@if (success == 'true') {
+  <h1 class="ui header">Erfolg!</h1>
+}
+@if (success == 'true') {
+  <p>Deine Anmeldung war erfolgreich!</p>
+}
+@if (success != 'true') {
+  <h1 class="ui header">Deine Anmeldung</h1>
+}
 <p>Hier unten findest du nochmal die Informationen zu deiner Anmeldung:</p>
 
 <h3>{{event?.name}}</h3>
